--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "apollo-server-express": "^3.12.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2"
   },
   "devDependencies": {
