--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:3001",
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@emotion/react": "^11.11.1",
@@ -24,7 +25,8 @@
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4",
-    "yup": "^1.3.0"
+    "yup": "^1.3.0",
+    "jwt-decode": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
