--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +15,9 @@
     "apollo-server-express": "^3.12.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "jsonwebtoken": "^9.0.0",
+    "bcrypt": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
