--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "quit-playing-games-with-my-stocks",
+  "proxy": "http://localhost:3001/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
