--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js --ignore client",    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start": "node server/server.js --ignore client",    
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
@@ -22,8 +23,5 @@
   "homepage": "https://github.com/Titan-MP/Quit-Playing-Games-With-My-Stocks#readme",
   "devDependencies": {
     "concurrently": "^8.2.1"
-  },
-  "dependencies": {
-    "mongodb": "^6.1.0"
   }
 }
