--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,16 @@
     "@apollo/client": "^3.8.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/lato": "^5.0.12",
     "@fontsource/source-sans-pro": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
