--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4",
-    "yup": "^1.3.0"
+    "yup": "^1.3.0",
+    "jwt-decode": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
