--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "bcrypt": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
