--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "git+https://github.com/Titan-MP/Quit-Playing-Games-With-My-Stocks.git"
   },
+  "engines": {
+    "node": "16.20.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
