added queries in Utils folder and added useQueries to connect database to the Position Card

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "watch": "nodemon"
+    "watch": "nodemon",
+    "start": "node server.js",
+    "seed": "node seeders/seed.js"
   },
   "keywords": [],
   "author": "",
